# runner

./: .gitignore  CMakeLists.txt  README.md  a  a.out  main.cpp  pyproject.toml  setup.py  test.py  to_string_from_syscalls.txt  wrapper.cpp
include/runner/: cgroup_manager.h  domain.h  init-seccomp.h  message_assert.h  mount.h  mount_manager.h  runner.h  seccomp_manager.h
include/safe-runner/: runner.h
src/: cgroup_manager.cpp  init-seccomp.cpp  message_assert.cpp  mount.cpp  mount_manager.cpp  runner.cpp  wrapper.cpp
